<resources>
    <string name="app_name">Rutas_MCTuristic</string>
    <string name="title_activity_referencia">ReferenciaActivity</string>
    <string name="hint_username">Nombre de usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="text_button_login">Login</string>
    <string name="dont_have_account">¿No tienes cuenta?,</string>
    <string name="create_here">crea una aquí</string>
    <string name="hint_email">Correo</string>
    <string name="hint_name">Nombre</string>
    <string name="hint_user">Usuario</string>
    <string name="hint_confirm_password">Confirmar Contraseña</string>
    <string name="text_button_createaccount">Únete</string>
    <string name="toolbar_tittle_createaccount">Crear Cuenta</string>
    <string name="username_card">Uriel Ramírez</string>
    <string name="firstword_card">Hace</string>
    <string name="timecard_card">4 días</string>
    <string name="likenumbercard_card">10 Me Gusta</string>
    <string name="tab_search">Buscar</string>
    <string name="tab_home">Sitios Históricos</string>
    <string name="tab_profile">Yo</string>
    <string name="facebook_app_id">1454819817893318</string>
    <string name="WebID">248589474861-7sg07s6bp7pbtrlk90o32bcoq2c0o50h.apps.googleusercontent.com</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="secondword_detail">Me Gusta</string>
    <string name="titleimagedetail">\"Todo copas en la playa\"</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="transitionname_picture">transitionnamepicture</string>

    <string name="textbutologin">login</string>
    <string name="usernamecar">Luis Puc</string>

</resources>
